--- a/src/app/components/re-useable/cards/education-card/education-card.component.html
+++ b/src/app/components/re-useable/cards/education-card/education-card.component.html
@@ -1,23 +1,21 @@
-<div class="row">
-  <div class="col s12 m6">
-    <div class="card">
-      <div class="card-content">
-        <p>
-          <span class="card-title"
-            ><a
-              href="http://www.codi.tech/"
-              rel="noopener"
-              target="_blank"
-              class="teal-text hoverline"
-              >{{ school_name }}</a
-            ></span
-          >
-        </p>
-        <p class="brown-text">{{ school_period }}</p>
-        <div>
-          <i class="fas fa-certificate certified-icon"></i>
-          {{ school_result }}
-        </div>
+<div class="col s12 m6">
+  <div class="card">
+    <div class="card-content">
+      <p>
+        <span class="card-title"
+          ><a
+            [href]="user_school.school_url"
+            rel="noopener"
+            target="_blank"
+            class="teal-text hoverline"
+            >{{ user_school.school_name }}</a
+          ></span
+        >
+      </p>
+      <p class="brown-text">{{ user_school.school_period }}</p>
+      <div>
+        <i class="fas fa-certificate certified-icon"></i>
+        {{ user_school.school_result }}
       </div>
     </div>
   </div>
