--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,17 +12,14 @@
         design, collaboration, and teaching.
       </blockquote>
       <p>
-        Gaby is a highly experienced and creative coder. He is spontaneous in
-        his decisions and believes in body asleep mind awake. He is willing to
-        participate in any hackathons near him. If you give him a pc and put
-        Pink Floyd music, he will write the best code.
+        Ahmad is <b>`compassionate`</b> about creating websites and
+        applications. He is a <b>`quick learner`</b> in the web development
+        field. Ahmad <b>`never give up`</b> searching and debugging to create
+        useful solutions. He is <b>`committed`</b> to his work. He is
+        <b>`self-motivated`</b> who keeps pushing himself to learn new things
+        all the time. He is so <b>`friendly`</b>
+        and easy to talk to at any time.
       </p>
-      <p>
-        As a web developer, I intend to use my obsessive attention to detail, my
-        unequivocal love for making things, and my mission-driven work ethic to
-        literally change the world.
-      </p>
-      <p><strong>I want to make things that make a difference</strong>.</p>
     </div>
   </app-section>
 
