--- a/src/app/components/re-useable/cards/contact-card/contact-card.component.html
+++ b/src/app/components/re-useable/cards/contact-card/contact-card.component.html
@@ -4,7 +4,7 @@
       [href]="user_email"
       data-position="top"
       data-tooltip="Email Ahmad"
-      class="btn-floating btn-large waves-effect waves-light brown tooltipped"
+      class="btn-floating btn-large waves-effect waves-light custom-blue tooltipped"
       ><i class="fa fa-envelope"></i>
     </a>
     <a [href]="user_email" target="_blank" class="hoverline contact-link">
@@ -18,7 +18,7 @@
       target="_blank"
       data-position="top"
       data-tooltip="View Ahmad on GitHub"
-      class="btn-floating btn-large waves-effect waves-light brown tooltipped"
+      class="btn-floating btn-large waves-effect waves-light custom-blue tooltipped"
       ><i class="fab fa-github"></i>
     </a>
     <a
@@ -37,7 +37,7 @@
       target="_blank"
       data-position="top"
       data-tooltip="View Ahmad on LinkedIn"
-      class="btn-floating btn-large waves-effect waves-light brown tooltipped"
+      class="btn-floating btn-large waves-effect waves-light custom-blue tooltipped"
       ><i class="fab fa-linkedin-in"></i>
     </a>
     <a
