--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -2,11 +2,11 @@
   <div class="profile-definition">
     <a href="#" class="profile-name"
       >Ahmad Khoja
-      <span class="profile-profession">Full Stack Developer</span></a
+      <span class="profile-profession">Full Stack Web Developer</span></a
     >
   </div>
 
-  <ul class="menu">
+  <!-- <ul class="menu">
     <li class="menu-item">
       <a href="#" class="menu-item--link">
         <i class="mdi-social-person small user-icon cyan-left-border"></i>
@@ -49,5 +49,5 @@
         <span>Resume</span>
       </a>
     </li>
-  </ul>
+  </ul> -->
 </div>
