--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,4 +17,6 @@ blockquote {
   font-weight: 400;
   margin: 20px 0;
   padding-left: 1.5rem;
+  border-left: 5px solid #f44336;
+  color: #f44336;
 }
