--- a/src/app/components/re-useable/cards/skill-card/skill-card.component.html
+++ b/src/app/components/re-useable/cards/skill-card/skill-card.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-content">
       <h4
-        class="brown-text light"
+        class="blue-text light"
         style="border-bottom: 1px solid #ddd; margin-bottom: 30px; padding-bottom: 20px;"
       >
         {{ user_skill.title }}
